--- a/html5-slide-template.html
+++ b/html5-slide-template.html
@@ -36,7 +36,7 @@
             <p>HTML5演示模板</p>
             <p>按<span class="key">&rarr;</span>键 进入下一页</p>
             <p style="font-size: 25px">请使用<a href="http://www.google.com/chrome/">Google Chrome</a>浏览。在演示中遇到问题？阅读 <a href="disclaimer.html">免责声明</a></p>
-            <p style="font-size: 25px">下载<a href="http://code.google.com/p/html5-slide-template/downloads/list">Google Chrome</a>地址</p>
+            <p style="font-size: 25px">下载<a href="http://code.google.com/p/html5-slide-template/downloads/list">地址</a></p>
    
    </section>
         </div>
