--- a/trunk/html5-slide-template.html
+++ b/trunk/html5-slide-template.html
@@ -88,12 +88,12 @@
           <header><h1>视频和音乐</h1></header>
        <section style="text-align: center;">
  
-              <video  src="media/Nationals_Government_went_back_to_Nanjing.ogg" controls="controls">
-<source src="assets/dizzy.mp4" />
+              <video  src="media/Nationals_Government_went_back_to_Nanjing.ogg" controls="controls"  autoplay="false"
+>
               </video>
             
-              <audio  src="media/jiang.ogg" controls="controls">
-                Your browser dows not support the audio tag
+              <audio  src="media/jiang.ogg" controls="controls"  autoplay="false"
+>
               </audio>
           </section>
         
