--- a/trunk/html5-slide-template.html
+++ b/trunk/html5-slide-template.html
@@ -88,11 +88,11 @@
           <header><h1>视频和音乐</h1></header>
        <section style="text-align: center;">
  
-              <video  src="media/Nationals_Government_went_back_to_Nanjing.ogg" controls="controls"  autoplay="false"
+              <video  src="media/Nationals_Government_went_back_to_Nanjing.ogg" controls="controls"  
 >
               </video>
             
-              <audio  src="media/jiang.ogg" controls="controls"  autoplay="false"
+              <audio  src="media/jiang.ogg" controls="controls"  
 >
               </audio>
           </section>
